# project-tiny-context-harness

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  GOVERNANCE.md  Makefile  PROJECT_SPEC.md  README.md  README.zh-CN.md  SECURITY.md  SUPPORT.md  package-lock.json  package.json  rust-toolchain.toml
.agent/: config.yaml
.cargo/: config.toml
.codex/: config.yaml  hooks.json
.devcontainer/: devcontainer.json
.docs/: INDEX.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  temporary-long-task-efficiency-followups.patch
.harness/: config.yaml
.work_products/: INDEX.md
docs/: HFC011_MANAGED_HOST_EXPERIMENT_ARCHIVE.md  adopt-existing-repo.md  agent-surface-recipes.md  benchmarking.md  comparison.md  design-resource-authoring-source-plan.md  faq.md  figma-native-design-resource-input-source.md  long-task-workflow-efficiency.md  page-level-uiux-authority-source-plan.md  roadmap.md  test-suite-roi-redesign.md  (+1 more)
host/ty-context-host-helper/: Cargo.toml
host/ty-context-host-helper/src/: admin.rs  admin_presence.rs  admin_runtime.rs  attestation.rs  cache.rs  durable_file.rs  error.rs  hook_smoke.rs  identity.rs  installer_ui.rs  journal.rs  lib.rs  main.rs  registry.rs  registry_admin.rs  registry_admin_gc.rs  registry_admin_journal.rs  registry_admin_tests.rs  registry_integrity.rs  rpc.rs  sandbox.rs  sandbox_io.rs  sandbox_launcher.rs  sandbox_linux.rs  sandbox_macos.rs  sandbox_node_options_tests.rs  sandbox_windows.rs  sandbox_windows_acl.rs  sandbox_windows_desktop.rs  sandbox_windows_handle.rs  sandbox_windows_network.rs  sandbox_windows_paths.rs  sandbox_windows_stdio.rs  sandbox_windows_tests.rs  secret.rs  service.rs  service_config.rs  service_health.rs  service_hook.rs  transport.rs  (+6 more)
(+1152 files in other folders)
